--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/admin/EditPersistedUserGroupPage.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/admin/EditPersistedUserGroupPage.html
@@ -24,7 +24,8 @@
                 <form wicket:id="form">
                     <div class="row">
                         <div wicket:id="name"/>
-                        <div wicket:id="organization"/>                        
+                        <div wicket:id="organization"/>
+                        <div wicket:id="users"/>                        
                     </div>
                     <div class="row">
                         <div class="span4">
