--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/TransactionPage.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/TransactionPage.html
@@ -26,6 +26,8 @@
                         <div class="span10 well">
                             <div wicket:id="bc"/>
                             <input wicket:id="submit" type="button"/>
+                            <input wicket:id="save" type="button"/>
+                            <input wicket:id="cancel" type="button"/>
                         </div>
                     </div>
                 </form>
