--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/cdf/pages/reports/ReportsExport.html
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/cdf/pages/reports/ReportsExport.html
@@ -44,6 +44,7 @@
 								<option value="2010">2010</option>
 								<option value="2011">2011</option>
 								<option value="2012">2012</option>
+								<option value="2012">2013</option>
 							</select>
 						</div>
 					</div>
